dev-tools/minikube/1-Platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oih-dev-ingress
  namespace: oih-dev-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: iam.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam
            port: 
              number: 3099
  - host: skm.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secret-service
            port:
              number: 3000
  - host: flow-repository.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: flow-repository
            port:
              number: 3001
  - host: template-repository.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: template-repository
            port:
              number: 3001
  - host: auditlog.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audit-log
            port:
              number: 3007
  - host: metadata.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meta-data-repository
            port:
              number: 3000
  - host: component-repository.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: component-repository
            port:
              number: 1234
  - host: snapshots-service.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snapshots-service
            port:
              number: 1234
  - host: webhooks.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhooks
            port: 
              number: 1234
  - host: web-ui.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui
            port:
              number: 3000
  - host: attachment-storage-service.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: attachment-storage-service
            port:
              number: 3002
  - host: data-hub.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: data-hub-service
            port:
              number: 1234
  - host: ils.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ils
            port:
              number: 3003
  - host: app-directory.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-directory
            port:
              number: 3000
  - host: dispatcher-service.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dispatcher-service
            port:
              number: 3013
